--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-4e46e00f-17d3-4b08-b7be-380bf64da4a8;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
